# multi_agent_solver

./: .clang-format  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENCE  Makefile  README.md  package.xml  packing.cmake  perf.data
.github/workflows/: ci.yml
cmake/: FindEigen3.cmake  MultiAgentSolverConfig.cmake.in
code/: CMakeLists.txt
code/examples/: lqr.hpp  multi_agent_lqr.hpp  multi_agent_single_track.hpp  single_track_ocp.hpp
code/include/: constraint_helpers.hpp  integrator.hpp  line_search.hpp  multi_agent_aggregator.hpp  multi_agent_nash.hpp  ocp.hpp  types.hpp
code/include/models/: single_track_model.hpp
code/include/solvers/: cgd.hpp  constrained_gradient_descent.hpp  gradient_descent.hpp  ilqr.hpp  osqp_solver.hpp  solver.hpp
code/src/: main.cpp
docs/research/: multiple_shooting_ilqr.md
examples/: cli.hpp  example_utils.hpp  multi_agent_lqr.cpp  multi_agent_lqr.hpp  multi_agent_single_track.cpp  pendulum_swing_up.cpp  rocket_max_altitude.cpp  single_track_ocp.cpp  solution_export.hpp
examples/models/: pendulum_model.hpp  rocket_model.hpp  single_track_model.hpp
include/: constraint_helpers.hpp  finite_differences.hpp  gradient_descent.hpp  ilqr.hpp  integrator.hpp  line_search.hpp  lqr.hpp  multi_agent_aggregator.hpp  ocp.hpp  solver_output.hpp  sqp_solver.hpp  types.hpp  unconstrained_gradient_decent.hpp
include/models/: dynmic_bicycle_model.hpp
include/multi_agent_solver/: agent.hpp  autodiff.hpp  autodiff_derivatives.hpp  constraint_helpers.hpp  coupling.hpp  finite_differences.hpp  integrator.hpp  line_search.hpp  multi_agent_aggregator.hpp  multi_agent_problem.hpp  multi_agent_solver.hpp  ocp.hpp  solution.hpp  types.hpp
include/multi_agent_solver/models/: single_track_model.hpp
include/multi_agent_solver/solvers/: cgd.hpp  ilqr.hpp  multi_shooting_ilqr.hpp  osqp.hpp  osqp_collocation.hpp  osqp_solver.hpp  primal_dual_ilqr.hpp  solver.hpp
include/multi_agent_solver/strategies/: best_response.hpp  centralized.hpp  nash.hpp  strategy.hpp
include/solvers/: constrained_gradient_descent.hpp  gradient_descent.hpp  ilqr.hpp  osqp_solver.hpp
scripts/: animate_example.py  build.sh  compare_solvers.py  plot_example.py  profile.sh  run.sh  run_docker.sh  setup_dependencies.sh
src/: main.cpp
tests/: ocp_tests.cpp
